# a2_ros

./: .gitmodules  CMakeLists.txt  README.md  compose.yaml  dependencies.txt  install.sh  package.xml
.github/workflows/: docker-publish.yaml
environment/shell/: .bashrc
scripts/: build_workspace.sh  setup.sh  setup_devenv.sh  start_zenoh_router.sh
scripts/pc2/: pc2_joy.sh
src/core/a2_deployment_config/: CMakeLists.txt
src/core/a2_deployment_config/config/zenoh/: zenoh-session-config.robot.json5.jinja2  zenoh-session-config.sim.json5.jinja2
src/core/a2_deployment_config/scripts/: setup_zenoh.sh
src/meta_packages/a2_ros/launch/: real.launch.py  sim.launch.py
